@@ -1,0 +1,145 @@
+<html>
+
+<head>
+<meta http-equiv="Content-Language" content="en-us">
+<title>EjbDeploy Task</title>
+
+</head>
+
+<body>
+
+<h2><a name="ejbdeploy">ejbdeploy</a></h2>
+<h3><b>Description:</b></h3>
+
+<p>The <code>ejbdeploy</code> task is used to run a "hot" deployment tool for
+vendor-specific J2EE server.  The task runs the tool in a separate JVM.  The
+task requires nested elements which define the attributes of the
+vendor-specific deployment tool being executed.
+</p>
+
+<h3>Parameters:</h3>
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">action</td>
+    <td valign="top">This is the action to be performed.  For most cases this
+    will be "deploy".  Some tools support additional actions, such as "delete", "list",
+    "undeploy", "update"...</td>
+    <td>Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">classpath</td>
+    <td valign="top">The classpath to be passed to the JVM running the tool.
+    The classpath may also be supplied as a nested element.</td>
+    <td>No</td>
+  </tr>
+  <tr>
+    <td valign="top">serverUrl</td>
+    <td valign="top">The URL for the server where the component will be deployed.</td>
+    <td>No</td>
+  </tr>
+  <tr>
+    <td valign="top">username</td>
+    <td valign="top">The user with privileges to deploy applications to the server.</td>
+    <td>No</td>
+  </tr>
+  <tr>
+    <td valign="top">password</td>
+    <td valign="top">The password of the user with privileges to deploy
+    applications to the server.</td>
+    <td>Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">source</td>
+    <td valign="top">A fully qualified path/filename of the component to be deployed.
+    This may be a EAR, JAR, WAR, or any other type that is supported by the server.
+    </td>
+    <td>No</td>
+  </tr>
+</table>
+
+<h3>Nested Elements</h3>
+
+<p>The ejbdeploy task supports a nested &lt;classpath&gt;
+element to set the classpath.</p>
+
+<h3>Vendor-specific nested elements</h3>
+
+<p>Also supported are nested vendor-specific elements.</p>
+
+<h3>WebLogic element</h3>
+<p>
+The WebLogic element contains additional parameters to run the
+<code>weblogic.deploy</code> deployment tool.
+<p>Valid actions for the tool are <code>deploy</code>, <code>undeploy</code>,
+<code>list</code>, <code>update</code>, and <code>delete</code>.
+<p>If the action is <code>deploy</code> or <code>update</code>,
+the <code>application</code> and <code>source</code> attributes must be set.
+If the action is <code>undeploy</code> or <code>delete</code>,
+the <code>application</code> attribute must be set.
+<p>
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">application</td>
+    <td valign="top">This is the name of the application being deployed</td>
+    <td>Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">component</td>
+    <td valign="top">This is the component string for deployment targets.
+    It is in the form <code>&lt;component&gt;:&lt;target1&gt;,&lt;target2&gt;...</code>
+    Where component is the archive name (minus the .jar, .ear, .war
+    extension).  Targets are the servers where the components will be deployed</td>
+    <td>Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">debug</td>
+    <td valign="top">If set to true, additional information will be
+    printed during the deployment process.</td>
+    <td>No</td>
+  </tr>
+</table>
+
+
+<h3>Examples</h3>
+
+<p>This example shows the use of ejbdeploy to deploy a component to a WebLogic server:</p>
+
+<pre>
+    &lt;ejbdeploy action=&quot;deploy&quot;
+           serverUrl=&quot;t3://myserver:7001&quot;
+           classpath=&quot;${classpath}&quot;
+           username=&quot;${user.name}&quot;
+           password=&quot;${user.password}&quot;
+           source=&quot;${lib.dir}/ejb_myApp.ear&quot;&gt;
+               &lt;weblogic application=&quot;myapp&quot;
+                   component=&quot;ejb_foobar:myserver,productionserver&quot;
+                   debug=&quot;true&quot;/&gt;
+    &lt;/ejbdeploy&gt;
+</pre>
+
+<p>This example shows ejbdeploy being used to delete a component from a
+WebLogic server:</p>
+
+<pre>
+    &lt;ejbdeploy action=&quot;delete&quot;
+           serverUrl=&quot;t3://myserver:7001&quot;
+           classpath=&quot;${classpath}&quot;
+           username=&quot;${user.name}&quot;
+           password=&quot;${user.password}&quot;&gt;
+               &lt;weblogic application=&quot;myapp&quot;/&gt;
+    &lt;/ejbdeploy&gt;
+</pre>
+<hr>
+<p align="center">Copyright &copy; 2002 Apache Software Foundation. All rights Reserved.</p>
+</body>
+</html>
